# cicd-workflow

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  README.md  mise.toml  release-please-config.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: _python-service-tests.yaml  _test-python-app.yaml  api-tests.yaml  dependency-review.yaml  docker-build-push.yaml  e2e-tests.yaml  gitleaks.yaml  manifests-lint.yaml  promote-prod.yaml  release-please.yaml  study-tracker-api-tests.yaml  study-tracker-web-tests.yaml  update-gitops.yaml  web-tests.yaml
apps/study-tracker/api/: CHANGELOG.md  Dockerfile  pyproject.toml
apps/study-tracker/api/data/: sessions.csv
apps/study-tracker/api/src/api/: __init__.py  config.py  main.py  models.py  storage.py
apps/study-tracker/api/tests/: conftest.py  test_config.py  test_main.py  test_storage.py
apps/study-tracker/web/: .dockerignore  CHANGELOG.md  Dockerfile  pyproject.toml
apps/study-tracker/web/src/web/: __init__.py  api_client.py  config.py  main.py
apps/study-tracker/web/src/web/templates/: base.html  error.html  index.html
apps/study-tracker/web/tests/: conftest.py  test_api_client.py  test_config.py  test_main.py
kubernetes/: README.md  conftest.py  k3d-config.yaml  pyproject.toml  setup_cluster_gitops  setup_cluster_local  setup_cluster_minimal  setup_gitops
kubernetes/helpers/: cluster.py  service_url.py
kubernetes/manifests/base/: kustomization.yaml
kubernetes/manifests/base/study-tracker-api/: deployment.yaml  service.yaml
kubernetes/manifests/base/study-tracker-web/: deployment.yaml  service.yaml
kubernetes/manifests/dev/: kustomization.yaml  namespace.yaml
kubernetes/manifests/dev/study-tracker-api/: kustomization.yaml
kubernetes/manifests/dev/study-tracker-web/: kustomization.yaml
kubernetes/tests/: test_api_sessions.py  test_api_stats.py  test_api_validation.py  test_health.py  test_integration.py
scripts/: setup  setup_deploy_key  setup_project
scripts/ci/: cluster-diagnostics.sh  compute-image-tags.sh  patch-kustomization.sh  pip-audit.sh  read-image-tag.sh  required-gate.sh
