[project]
name = "study-tracker-e2e"
version = "0.1.0"
description = "End-to-end tests for Study Tracker on k3d"
requires-python = ">=3.14"
dependencies = []  # tests-only project; all deps live in the dev group

[dependency-groups]
dev = [
    "pytest>=8.0",
    "requests>=2.34.2",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "e2e: end-to-end test requiring a live k3d cluster",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
