[project]
name = "study-tracker-api"
version = "0.3.4"
description = "Backend API for tracking study time."
readme = "README.md"
authors = [
    { name = "RamonCollazo", email = "73500190+RamonCollazo@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "httpx>=0.28.1",
    "mypy>=1.13.0",
    "pip-audit>=2.7.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

[project.scripts]
study-tracker-api = "api.main:main"

[tool.ruff]
target-version = "py314"

[tool.coverage.run]
source = ["src/api"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=xml --cov-fail-under=80"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
