[project]
name = "study-tracker-web"
version = "0.1.0"
description = "Web frontend for Study Tracker application."
readme = "README.md"
authors = [
    { name = "RamonCollazo", email = "73500190+RamonCollazo@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
]

[project.scripts]
study-tracker-web = "web.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/web"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
